Add numbers 62 and 63

--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@
             "59": "number_43-59",
             "60": "number_60",
             "61": "number_61",
+            "62": "number_62",
+            "63": "number_63",
             "64": "number_64-74",
             "65": "number_64-74",
             "66": "number_64-74",
